2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGAttributedString.m: ([setAttributes:range:]) make sure
	attributes are set when old range starts at start of new range.

2000-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Become an unpriveliged user after binding to
	port 538 (for which we need to be root).  This should relieve
	some security considerations.

2000-03-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: Added private methods from concrete class.

2000-03-17  Adam Fedor  <fedor@gnu.org>

	* Documentation/coding-standards.tmpl.texi: Update

2000-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	Changed so that property lists are output in a compact form when
	no locale is supplied.
	* Documentation/gsdoc/NSObject.gsdoc: Added documentation of the
	various description methods.
	* GSDoc/gsdoc.m: Bugfixes for text in descriptions.
	* Headers/gnustep/base/NSObject.h: Updated description methods
	* Source/NSArray.m: Updated to be closer to MacOS description.
	* Source/NSDictionary.m: ditto.
	* Source/NSGCString.m: ditto.
	* Source/NSGString.m: ditto.
	* Source/NSObject.m: added more description methods.
	* Tools/defaults.m: updated to use locale.
	* Tools/dread.m: ditto.
	* Tools/pldes.m: ditto.

Fri Mar 17 07:47:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSGString.m: Add checks to safely (and more efficiently)
	handle deletion and insertion of zero-length ranges.
	* Source/NSGCString.m: ditto.

Thu Mar 16 11:37:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRange.m: NSRangeFromString() bugfix by karl@nfox.com
	* Source/NSData.m: ([-hash]) new implementation by karl

Sat Mar 11 21:04:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GSDoc/gsdoc.m: Updated for recent version of xml library.

Fri Mar 10 10:45:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GSDoc/gsdoc-0_6_5.dtd: Altered to add standard conformance to