@@ -1,5 +1,14 @@
 2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Source/NSUserDefaults.m: ([-description]) implemented.
+	* Source/NSArray.m: ([-descriptionWithLocale:indent:]) put space
+	after comma even when doing unformatted description.
+	* Source/NSDictionary.m: ([-descriptionWithLocale:indent:]) put space
+	after semicolon and around equals even when doing unformatted
+	description. Don't sort array items in unformatted description.
+
+2000-03-19  Richard Frith-Macdonald <rfm@gnu.org>
+
 	* Source/NSGAttributedString.m: ([setAttributes:range:]) make sure
 	attributes are set when old range starts at start of new range.
 
